<?xml version="1.0" encoding="utf-8"?>

<!--
-   CONTENT FOR THE LIST FRAGMENT
-->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- APP BAR -->
        <include layout="@layout/app_bar"/>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- RECYCLER VIEW FOR MEDIA ITEMS LIST -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/media_items_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/list_padding_bottom"
                android:clipToPadding="false"/>

            <!-- TEXT IF LIST IS EMPTY -->
            <TextView
                android:id="@+id/list_empty_view"
                style="@style/ListEmptyNotice"
                android:text="@string/list_empty"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- FAB -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/items_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"/>

</FrameLayout>




