...
            android:layout_marginBottom="@dimen/list_drag_handler_padding"/>

    </LinearLayout>

    <!-- CLICKABLE AREA -->
    <LinearLayout
        android:id="@+id/item_clickable_part"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:layout_marginStart="@dimen/list_drag_handler_padding">

...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/item_options_button"
            android:layout_width="@dimen/list_options_button_size"
            android:layout_height="@dimen/list_options_button_size"
            android:background="@drawable/ic_more"
            android:contentDescription="@string/options_button_description"
            android:layout_gravity="center"
            android:backgroundTint="@color/list_options_color"/>
...
